--- a/.htaccess
+++ b/.htaccess
@@ -7,3 +7,6 @@ RewriteRule ^ %{REQUEST_URI}.html [NC,L]
 
 #RewriteCond %{REQUEST_FILENAME} !-f
 #RewriteRule ^([^\.]+)$ $1.html [NC,L]
+
+ErrorDocument 404 /error404.html
+ErrorDocument 403 /error403.html
